--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 
 * {
   font-family: 'Roboto', Arial, sans-serif;
-  color: white;
+  color: #eeeeee;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -45,7 +45,7 @@ p {
 
 a {
   cursor: pointer;
-  color: cornflowerblue;
+  color: #52a8fd;
   text-decoration: none;
 }
 
@@ -80,14 +80,13 @@ button {
   border-radius: 2px;
   font-size: 14px;
   cursor: pointer;
-  background-color: cornflowerblue;
+  background-color: #52a8fd;
   color: white;
   border: none;
 }
 
 .button:hover,
 button:hover {
-  color: white;
   opacity: 0.8;
   font-weight: normal;
 }
@@ -102,11 +101,11 @@ button:disabled {
 
 .fancy-button {
   background-color: #616161;
-  color: white;
+  color: #eeeeee;
 }
 
 .fancy-button i.material-icons {
-  color: white;
+  color: #eeeeee;
   padding-right: 4px;
 }
 
@@ -115,7 +114,7 @@ button:disabled {
 app-top-bar {
   width: 100%;
   height: 68px;
-  background-color: cornflowerblue;
+  background-color: #52a8fd;
   padding: 16px;
   display: flex;
   flex-direction: row;
@@ -141,11 +140,11 @@ app-top-bar h1 {
   padding: 16px 32px;
   margin-bottom: 8px;
   border-radius: 2px;
-  background-color: white;
+  background-color: #52a8fd;
 }
 
 /*
 Copyright Google LLC. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
+Usehis source code is governed by an MIT-style license that
 can be found in the LICENSE file at http://angular.io/license
 */
